# swagger_output.json
@@ -5,8 +5,8 @@
     "title": "Flipic API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "host": "ec2-54-252-205-131.ap-southeast-2.compute.amazonaws.com",
-  "basePath": "/api",
+  "host": "localhost:4000",
+  "basePath": "/",
   "tags": [
     {
       "name": "Quiz",
@@ -18,10 +18,10 @@
     "https"
   ],
   "securityDefinitions": {
-    "apiKeyAuth": {
+    "Bearer": {
       "type": "apiKey",
       "in": "header",
-      "name": "X-API-KEY",
+      "name": "Authorization",
       "description": "any description..."
     }
   },
@@ -229,9 +229,13 @@
           "type": "string",
           "example": "Quiz Name"
         },
-        "hash": {
+        "quizCreator": {
           "type": "string",
-          "example": "Quiz Hash"
+          "example": "Quiz Creators Name"
+        },
+        "privacyType": {
+          "type": "string",
+          "example": "Public"
         },
         "items": {
           "type": "array",
